change db password

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -2,6 +2,6 @@ FROM mysql:latest
 ENV MYSQL_ROOT_PASSWORD="M@sterRoot"
 ENV MYSQL_DATABASE="wafd"
 ENV MYSQL_USER="db_user"
-ENV MYSQL_PASSWORD="M@ster123"
+ENV MYSQL_PASSWORD="M4ster123"
 VOLUME /var/lib/mysql
 EXPOSE 3306
