--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3
 COPY . /usr/src/app
-RUN python3 -m pip install Flask flask_sqlalchemy flask_marshmallow flask_cors marshmallow-sqlalchemy pymysql requests json os
+RUN python3 -m pip install Flask flask_sqlalchemy flask_marshmallow flask_cors marshmallow-sqlalchemy pymysql requests
 WORKDIR /usr/src/app
 EXPOSE 5000
-ENV DATABASE_URL="mysql+pymysql://db_user:M@ster123@db/wafd"
+ENV DATABASE_URL="mysql+pymysql://db_user:M4ster123@db/wafd"
 CMD ["python3","app.py"]
