--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ services:
     ports: 
       - 5000:80
     depends_on: 
-      - db
-
+      - database
 
   website:
     build: ./web
@@ -22,16 +21,9 @@ services:
       - 5001:80
 
   database:
-    #build: ./db
-    image: mysql:latest
+    build: ./db
     hostname: database
-    environment:
-      MYSQL_ROOT_PASSWORD: M@st3rRoot
-      MYSQL_DATABASE: wafd
-      MYSQL_USER: db_user
-      MYSQL_PASSWORD: M4ster123
     ports:
       - 3306:3306
-    volumes:
-      - ./db:/var/lib/mysql
+    
     
