--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM mysql:latest
-ENV MYSQL_ROOT_PASSWORD="M@sterRoot"
-ENV MYSQL_DATABASE="wafd"
-ENV MYSQL_USER="db_user"
-ENV MYSQL_PASSWORD="M4ster123"
+ENV MYSQL_ROOT_PASSWORD=M4sterRoot
+ENV MYSQL_DATABASE=wafd
+ENV MYSQL_USER=db_user
+ENV MYSQL_PASSWORD=M4ster123
 VOLUME /var/lib/mysql
