--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,14 @@ services:
       - 5001:80
 
   db:
-    build: ./db
+    image: mysql:5.7
     hostname: db
     env_file:
       - ./db/db.env
     ports:
       - 3306:3306
+    volumes:
+      - ./db/data:/var/lib/mysql
 
   api:
     build: ./api
@@ -29,3 +31,4 @@ services:
       - 80:80
     depends_on:
       - api
+
