added port connection to db

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.8
-ENV DATABASE_URL="mysql+pymysql://db_user:M4ster123@db/wafd"
+ENV DATABASE_URL="mysql+pymysql://db_user:M4ster123@db:3306/wafd"
 COPY . /usr/src/app
 RUN python3 -m pip install Flask flask_sqlalchemy flask_marshmallow flask_cors marshmallow-sqlalchemy pymysql requests
 WORKDIR /usr/src/app
