--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,18 @@ services:
       - 3306:3306
     volumes:
       - ./db/data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   api:
     build: ./api
     ports: 
       - 5000:80
     depends_on: 
-      - db 
+      db:
+        condition: service_healthy 
     links:
       - db
 
