--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,18 +22,27 @@ services:
 
   api:
     build: ./api
-    ports: 
+    ports:
       - 5000:80
-    depends_on: 
+    depends_on:
       db:
-        condition: service_healthy 
+        condition: service_healthy
     links:
       - db
 
   website:
     build: ./web
     ports:
-      - 80:80
+      - "8080-8085:80"
     depends_on:
       - api
 
+
+  nginx:
+    image: nginx:1.13
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - website
