--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
     server {
         listen 8080;
         location / {
-            proxy_pass http://website;
+            proxy_pass http://website:8080;
         }
     }
 }
