load balancer added

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,14 +2,14 @@ events { worker_connections 1024;}
 
 http {
     upstream website {
-        server website:8080;
-        server website:8081;
-        server website:8082;
+        server website:80;
+        server website:81;
+        server website:82;
     }
     server {
-        listen 8080;
+        listen 80;
         location / {
-            proxy_pass http://website:8080;
+            proxy_pass http://website;
         }
     }
 }
